# Study.PY

./: .env.default  .gitignore  .pylintrc  README.md  main.py  pyproject.toml
00.TEMP/: abc.py  myAbc.py  测试mypy的例子.py
00优秀实践/: .README.md  1.拉平多层嵌套的ifelse.py  2.使用卫语句拉平多层嵌套的ifelse.py
BeautifulSoupStudy/: index.py
CollectionStudy/: .README.md  index.py  从空数组内读取元素.py  各种集合类型的创建与使用.py  推导式.py
Excel使用研究/: index.py
F.0.函数种类/: 1.1.普通函数.py  2.1.异步函数(协程).py  2.2.异步生成器.py
F.1.生成器和协程研究/: .README.md  1.定义和调用生成器.py  3.生成器的执行逻辑-示例说明.py  3.生成器的执行逻辑.py  OK.02.协程就是异步函数.py  OK.await使用.0.README.md  OK.await使用.2.1.等待协程任务.py  OK.await使用.2.3等待协程任务.py  OK.await使用.4.协程任务结束回调其他方法.py  Using.1.综合应用.py  Using.2.使用生成器创建的经典协程在生产者和消费者之间来回跳转的例子.py  yield_for.py  yield_primer.py
F1.1.生成器和协程研究/: OK.01.协程函数与协程对象.py  OK.await使用.3.等待协程任务-简化.py  Using.2.使用生成器创建的经典协程在生产者和消费者之间来回跳转的例子.py  op.py  yield_from.py
F1.2.生成器和迭代器、可迭代对象/: .README.md  01.使用iter()函数将可迭代的对象转化成迭代器Iterator.py  01.迭代器入门.py  02.迭代器和可迭代对象（比如列表）的不同.py
F1.9.系统内置的生成器函数/: .README.md  1.py
IMPORT研究/: .README.md  0.common.3.py  1.__import__.1.py  1.__import__.2.py  1.__import__.4.py
InspectStudy/: InspectHelper.py  index.py
KWArgs使用/: index.py
Misc/: 1.排序算法测试.py  ObjectParser.py  Other.py  PandasStudy.py  ThreadStudy.py  id函数是一个内存中的对象标识.py  iterator_study.py  range的取值范围研究.py  re_study.py  request_demo.py  tonghuashun.js  意图测试.js
MyPipLibUsingStudy/: index.py  usingBL.py  usingPoetryStudy.py
PyAutoGUID.Study/: 01.入门.py  README.md
PyTestStudy/: test_MyModule1.py  test_a.py
Pynimate动画/: BarChart.py
RegexStudy/: index.html  index.py
Stream功能研究/: README.md
ULID使用/: index.py
VersionManage/: increase_patch.py
_localData/: animal.py
_res/: student.py
pyechartsStudy/: render.html
seabornStudy/: index.py
streamlit研究/: README.md  index.py
tests/: index.html  test_MyModule2.py  test_b.py
元类metaclass与type关键字/: 0.README.md  1.默认情形下type是class的元类.py  (+1 more)
切片研究/: list.py  (+1 more)
(+272 files in other folders)
