[tool.poetry]
name = "Python.Study"
version = "0.1.15"
description = ""
authors = ["解大劦 <develope@163.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
basiclibrary-py = "^0.6.13"
tomlkit = "^0.12.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
